--- a/code/report01.ipynb
+++ b/code/report01.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "License: Attribution 4.0 International (CC BY 4.0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Report 01"
    ]
   },
