--- a/code/chap02.ipynb
+++ b/code/chap02.ipynb
@@ -112,12 +112,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0.166666666667\n",
-      "2 0.166666666667\n",
-      "3 0.166666666667\n",
-      "4 0.166666666667\n",
-      "5 0.166666666667\n",
-      "6 0.166666666667\n"
+      "1 0.16666666666666666\n",
+      "2 0.16666666666666666\n",
+      "3 0.16666666666666666\n",
+      "4 0.16666666666666666\n",
+      "5 0.16666666666666666\n",
+      "6 0.16666666666666666\n"
      ]
     }
    ],
@@ -143,12 +143,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0.166666666667\n",
-      "2 0.166666666667\n",
-      "3 0.166666666667\n",
-      "4 0.166666666667\n",
-      "5 0.166666666667\n",
-      "6 0.166666666667\n"
+      "1 0.16666666666666666\n",
+      "2 0.16666666666666666\n",
+      "3 0.16666666666666666\n",
+      "4 0.16666666666666666\n",
+      "5 0.16666666666666666\n",
+      "6 0.16666666666666666\n"
      ]
     }
    ],
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bowl 1 0.6\n",
+      "Bowl 1 0.6000000000000001\n",
       "Bowl 2 0.4\n"
      ]
     }
@@ -435,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bowl 1 0.6\n",
+      "Bowl 1 0.6000000000000001\n",
       "Bowl 2 0.4\n"
      ]
     }
@@ -464,8 +464,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bowl 1 0.627906976744\n",
-      "Bowl 2 0.372093023256\n"
+      "Bowl 1 0.627906976744186\n",
+      "Bowl 2 0.37209302325581395\n"
      ]
     }
    ],
@@ -589,9 +589,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 0.333333333333\n",
+      "A 0.3333333333333333\n",
       "B 0.0\n",
-      "C 0.666666666667\n"
+      "C 0.6666666666666666\n"
      ]
     }
    ],
@@ -649,9 +649,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 0.333333333333\n",
+      "A 0.3333333333333333\n",
       "B 0.0\n",
-      "C 0.666666666667\n"
+      "C 0.6666666666666666\n"
      ]
     }
    ],
@@ -747,8 +747,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 0.740740740741\n",
-      "B 0.259259259259\n"
+      "A 0.7407407407407407\n",
+      "B 0.2592592592592592\n"
      ]
     }
    ],
@@ -800,9 +800,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Normalize: total probability is zero.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-965da3b39788>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msuite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUpdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'bag2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msuite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dbishop/ThinkBayes2/code/thinkbayes2.py\u001b[0m in \u001b[0;36mUpdate\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m   1376\u001b[0m             \u001b[0mlike\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLikelihood\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhypo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1377\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhypo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlike\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1378\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1379\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1380\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mLogUpdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dbishop/ThinkBayes2/code/thinkbayes2.py\u001b[0m in \u001b[0;36mNormalize\u001b[0;34m(self, fraction)\u001b[0m\n\u001b[1;32m    516\u001b[0m         \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTotal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    517\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 518\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Normalize: total probability is zero.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m         \u001b[0mfactor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfraction\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Normalize: total probability is zero."
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "suite.Update(('bag2', 'blue'))\n",
+    "suite.Print()"
    ]
   },
   {
@@ -825,13 +840,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fraternal 0.8518518518518517\n",
+      "identical 0.14814814814814814\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# because his twin brother was a guy and not a girl, it is less likely that they were fraternal since \n",
+    "# only half of fraternal twins are the opposite sex\n",
+    "\n",
+    "pmf = Pmf(dict(identical=.08, fraternal=.92))\n",
+    "pmf['identical'] *= 1\n",
+    "pmf['fraternal'] *= .5\n",
+    "pmf.Normalize()\n",
+    "pmf.Print()\n"
    ]
   },
   {
@@ -858,9 +889,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -870,35 +901,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 0.333333333333333*p/(0.333333333333333*p + 0.333333333333333)\n",
+      "B 0\n",
+      "C 0.333333333333333/(0.333333333333333*p + 0.333333333333333)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "pmf = Pmf(['A', 'B', 'C'])\n",
+    "pmf['A'] *= p\n",
+    "pmf['B'] *= 0\n",
+    "pmf['C'] *= 1\n",
+    "pmf.Normalize()\n",
+    "pmf.Print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.333333333333333"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "pmf['A'].evalf(subs=dict(p=0.5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.666666666666667"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "pmf['C'].evalf(subs=dict(p=0.5))"
    ]
   },
   {
@@ -950,24 +1018,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "from scipy.special import binom\n",
+    "import scipy.stats as stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4000000000000053"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "total = 100\n",
+    "desired_valid_results = 39\n",
+    "valid_results = 40\n",
+    "drawn = 99\n",
+    "\n",
+    "# Probablility of picking <desired_valid_results> out of <valid_results> in a sample size of <drawn> out of <total>\n",
+    "stats.hypergeom.pmf(desired_valid_results, total, valid_results, drawn)"
    ]
   },
   {
@@ -1037,21 +1123,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
