--- a/code/report02.ipynb
+++ b/code/report02.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -121,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avery 0.36363636363636365\n",
-      "blake 0.6363636363636364\n"
+      "blake 0.6363636363636364\n",
+      "avery 0.36363636363636365\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -153,8 +153,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avery 0.22222222222222224\n",
-      "blake 0.7777777777777778\n"
+      "blake 0.7777777777777778\n",
+      "avery 0.22222222222222224\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -185,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avery 0.5\n",
-      "blake 0.5000000000000001\n"
+      "blake 0.5000000000000001\n",
+      "avery 0.5\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -242,8 +242,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kim wins: 0.59471\n",
-      "wei wins: 0.40529\n"
+      "kim wins: 0.59521\n",
+      "wei wins: 0.40479\n"
      ]
     }
    ],
@@ -319,75 +319,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extended Socks in the Dark\n",
+    "## What's for Lunch\n",
     "\n",
-    "Suppose you have two boxes of socks, one with 20% white socks and the other with 60% white socks. The rest of the socks are black. You always pick from the same box. Each time you pick a sock out of the box, if it is a black sock, you put it back in the second box. If it is a white sock, you put it aside in a safe place. What are the odds that I was picking from Drawer 1 after finding 3 black socks and 2 white socks in that order?"
+    "Suppose your parents take turns making you lunch for school. Your mom packs you a pb&j for lunch 50% of the time, and other food 50% of the time. Your dad only packs you a pb&j 14% of the time though. How can you figure out your parents' schedule for making your lunch?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Drawer():\n",
-    "    def __init__(self, white, black):\n",
-    "        self.white = white\n",
-    "        self.black = black\n",
-    "    \n",
-    "    def add(self, color):\n",
-    "        if (color == \"white\"):\n",
-    "            self.white += 1\n",
-    "        elif (color == \"black\"):\n",
-    "            self.black += 1\n",
-    "            \n",
-    "    def pick(self, color):\n",
-    "        if (color == \"white\"):\n",
-    "            self.white -= 1\n",
-    "        elif (color == \"black\"):\n",
-    "            self.black -= 1\n",
-    "    \n",
-    "    def getPercentTotal(self, color):\n",
-    "        if (color == \"white\"):\n",
-    "            mix = self.white / (self.white + self.black)\n",
-    "        elif (color == \"black\"):\n",
-    "            mix = self.black / (self.white + self.black)\n",
-    "        else:\n",
-    "            mix = 0\n",
-    "        \n",
-    "        if (mix < 0):\n",
-    "            return 0\n",
-    "        else:\n",
-    "            return mix\n",
-    "\n",
-    "class Drawers(Pmf):\n",
+    "class Schedule(Pmf):\n",
     "    def __init__(self, hypos):\n",
     "        Pmf.__init__(self)\n",
     "        for hypo in hypos:\n",
     "            self.Set(hypo, 1)\n",
     "        self.Normalize()\n",
-    "        self.mixes = {\n",
-    "            'Drawer 1': Drawer(20, 80),\n",
-    "            'Drawer 2': Drawer(60, 40)\n",
-    "        }\n",
-    "        \n",
+    "        self.day = 0;\n",
     "        \n",
     "    def Update(self, data):\n",
     "        for hypo in self.Values():\n",
     "            like = self.Likelihood(data, hypo)\n",
     "            self.Mult(hypo, like)\n",
     "        self.Normalize()\n",
+    "        self.day += 1\n",
+    "        if (self.day >= 5):\n",
+    "            self.day = 0\n",
     "        \n",
     "    def Likelihood(self, data, hypo):\n",
-    "        if (data == 'white'):\n",
-    "            self.mixes[hypo].pick(data)\n",
-    "        elif (data == 'black'):\n",
-    "            self.mixes[hypo].pick(data)\n",
-    "            self.mixes['Drawer 2'].add(data)\n",
-    "                \n",
-    "        return self.mixes[hypo].getPercentTotal(data)"
+    "        if (hypo[self.day] == 'M'):\n",
+    "            prob_pb = .5\n",
+    "        else:\n",
+    "            prob_pb = .14\n",
+    "            \n",
+    "        if (data == 'pb&j'):\n",
+    "            return prob_pb\n",
+    "        else:\n",
+    "            return 1 - prob_pb"
    ]
   },
   {
@@ -399,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -408,25 +379,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Drawer 1 0.44923621876057607\n",
-      "Drawer 2 0.5507637812394239\n"
+      "('D', 'D', 'D', 'D', 'D') 0.004185653475329125\n",
+      "('D', 'D', 'D', 'D', 'M') 0.014948762411889733\n",
+      "('D', 'D', 'D', 'M', 'D') 0.014948762411889737\n",
+      "('D', 'D', 'D', 'M', 'M') 0.05338843718532048\n",
+      "('D', 'D', 'M', 'D', 'D') 0.0024335194624006545\n",
+      "('D', 'D', 'M', 'D', 'M') 0.008691140937145193\n",
+      "('D', 'D', 'M', 'M', 'D') 0.008691140937145193\n",
+      "('D', 'D', 'M', 'M', 'M') 0.03103978906123283\n",
+      "('D', 'M', 'D', 'D', 'D') 0.0024335194624006545\n",
+      "('D', 'M', 'D', 'D', 'M') 0.008691140937145193\n",
+      "('D', 'M', 'D', 'M', 'D') 0.008691140937145193\n",
+      "('D', 'M', 'D', 'M', 'M') 0.03103978906123283\n",
+      "('D', 'M', 'M', 'D', 'D') 0.0014148368967445669\n",
+      "('D', 'M', 'M', 'D', 'M') 0.005052988916944881\n",
+      "('D', 'M', 'M', 'M', 'D') 0.005052988916944881\n",
+      "('D', 'M', 'M', 'M', 'M') 0.01804638898908886\n",
+      "('M', 'D', 'D', 'D', 'D') 0.014948762411889737\n",
+      "('M', 'D', 'D', 'D', 'M') 0.05338843718532048\n",
+      "('M', 'D', 'D', 'M', 'D') 0.05338843718532048\n",
+      "('M', 'D', 'D', 'M', 'M') 0.1906729899475731\n",
+      "('M', 'D', 'M', 'D', 'D') 0.008691140937145193\n",
+      "('M', 'D', 'M', 'D', 'M') 0.03103978906123283\n",
+      "('M', 'D', 'M', 'M', 'D') 0.03103978906123283\n",
+      "('M', 'D', 'M', 'M', 'M') 0.11085638950440296\n",
+      "('M', 'M', 'D', 'D', 'D') 0.008691140937145193\n",
+      "('M', 'M', 'D', 'D', 'M') 0.03103978906123283\n",
+      "('M', 'M', 'D', 'M', 'D') 0.03103978906123283\n",
+      "('M', 'M', 'D', 'M', 'M') 0.11085638950440296\n",
+      "('M', 'M', 'M', 'D', 'D') 0.005052988916944881\n",
+      "('M', 'M', 'M', 'D', 'M') 0.01804638898908886\n",
+      "('M', 'M', 'M', 'M', 'D') 0.018046388989088856\n",
+      "('M', 'M', 'M', 'M', 'M') 0.06445138924674591\n"
      ]
     }
    ],
    "source": [
-    "pmf = Drawers(['Drawer 1', 'Drawer 2'])\n",
-    "dataset = ['black', 'black', 'black', 'white', 'white']\n",
+    "import itertools\n",
+    "\n",
+    "pmf = Schedule([i for i in itertools.product(['M', 'D'], ['M', 'D'], ['M', 'D'], ['M', 'D'], ['M', 'D'])])\n",
+    "dataset = [\"pb&j\", \"other\", \"other\", \"pb&j\", \"pb&j\"]\n",
     "for data in dataset:\n",
     "    pmf.Update(data)\n",
-    "for hypo, prob in pmf.Items():\n",
-    "    print(hypo, prob)"
+    "    \n",
+    "pmf.Print()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus we know that it is likely that we were drawing from Drawer 2, as it had more white socks and the picking of the black socks had no effect on the number of socks in it."
+    "Based on the week's worth of data, it seems like the most likely schedule is:\n",
+    "* Monday: Mom\n",
+    "* Tuesday: Dad\n",
+    "* Wednesday: Dad\n",
+    "* Thursday: Mom\n",
+    "* Friday: Mom\n",
+    "\n",
+    "Let's see what happens after feeding another week's worth of data into the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('D', 'D', 'D', 'D', 'D') 0.0018661215411995263\n",
+      "('D', 'D', 'D', 'D', 'M') 0.023802570678565383\n",
+      "('D', 'D', 'D', 'M', 'D') 0.0038748370872083186\n",
+      "('D', 'D', 'D', 'M', 'M') 0.0494239424388816\n",
+      "('D', 'D', 'M', 'D', 'D') 0.0006307874328013542\n",
+      "('D', 'D', 'M', 'D', 'M') 0.008045758071445844\n",
+      "('D', 'D', 'M', 'M', 'D') 0.0013097745697702539\n",
+      "('D', 'D', 'M', 'M', 'M') 0.01670630828788588\n",
+      "('D', 'M', 'D', 'D', 'D') 0.003874837087208319\n",
+      "('D', 'M', 'D', 'D', 'M') 0.049423942438881596\n",
+      "('D', 'M', 'D', 'M', 'D') 0.00804575807144584\n",
+      "('D', 'M', 'D', 'M', 'M') 0.10262446519701325\n",
+      "('D', 'M', 'M', 'D', 'D') 0.001309774569770254\n",
+      "('D', 'M', 'M', 'D', 'M') 0.016706308287885885\n",
+      "('D', 'M', 'M', 'M', 'D') 0.0027196315817488654\n",
+      "('D', 'M', 'M', 'M', 'M') 0.03468917833863348\n",
+      "('M', 'D', 'D', 'D', 'D') 0.003874837087208319\n",
+      "('M', 'D', 'D', 'D', 'M') 0.0494239424388816\n",
+      "('M', 'D', 'D', 'M', 'D') 0.008045758071445842\n",
+      "('M', 'D', 'D', 'M', 'M') 0.10262446519701325\n",
+      "('M', 'D', 'M', 'D', 'D') 0.0013097745697702532\n",
+      "('M', 'D', 'M', 'D', 'M') 0.016706308287885885\n",
+      "('M', 'D', 'M', 'M', 'D') 0.0027196315817488654\n",
+      "('M', 'D', 'M', 'M', 'M') 0.03468917833863348\n",
+      "('M', 'M', 'D', 'D', 'D') 0.008045758071445842\n",
+      "('M', 'M', 'D', 'D', 'M') 0.10262446519701328\n",
+      "('M', 'M', 'D', 'M', 'D') 0.016706308287885885\n",
+      "('M', 'M', 'D', 'M', 'M') 0.21309066693731993\n",
+      "('M', 'M', 'M', 'D', 'D') 0.002719631581748866\n",
+      "('M', 'M', 'M', 'D', 'M') 0.03468917833863348\n",
+      "('M', 'M', 'M', 'M', 'D') 0.005647075543498474\n",
+      "('M', 'M', 'M', 'M', 'M') 0.07202902478952133\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = [\"other\", \"pb&j\", \"other\", \"other\", \"pb&j\"]\n",
+    "for data in dataset:\n",
+    "    pmf.Update(data)\n",
+    "    \n",
+    "pmf.Print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this new data, the new most likely schedule is:\n",
+    "* Monday: Mom\n",
+    "* Tuesday: Mom\n",
+    "* Wednesday: Dad\n",
+    "* Thursday: Mom\n",
+    "* Friday: Mom\n",
+    "\n",
+    "As more data arrives, the model will become more accurate, letting you guess which parent will be making your lunch, as long as they keep the same schedule between weeks."
    ]
   }
  ],
