--- a/code/chap04.ipynb
+++ b/code/chap04.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -644,7 +644,7 @@
        "0.5595238095238095"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,6 +1060,114 @@
    "outputs": [],
    "source": [
     "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n",
+      "0.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "mean, var = beta.stats(2, 3)\n",
+    "print(mean)\n",
+    "print(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n",
+      "0.23076923076923078\n",
+      "0.26666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = Beta(alpha = 2, beta = 3)\n",
+    "print(beta.Mean())\n",
+    "beta.Update((2, 8))\n",
+    "print(beta.MAP())\n",
+    "print(beta.Mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.495049504950522\n",
+      "0.495049504950522\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.009900990098955953"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Beta(,1).MakePmf()\n",
+    "b = Beta(1,1).MakePmf()\n",
+    "print(a.ProbGreater(b))\n",
+    "print(a.ProbLess(b))\n",
+    "1 - a.ProbGreater(b) - a.ProbLess(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.96059602960596\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = .99\n",
+    "\n",
+    "p0 = ((1-x)**2)**2\n",
+    "p1 = ((x*(1-x))**2)**2\n",
+    "p2 = (x**2)**2\n",
+    "\n",
+    "print(p0+p1+p2)"
    ]
   },
   {
