--- a/code/report03.ipynb
+++ b/code/report03.ipynb
@@ -880,7 +880,7 @@
    "source": [
     "## Project Update\n",
     "\n",
-    "I have not started, but I will probably be doing one of your suggested problems."
+    "My partner and I would like to work on a survival analysis problem"
    ]
   },
   {
